Lang: manage language code in URL path

--- a/src/Console/create/config/app.php.example
+++ b/src/Console/create/config/app.php.example
@@ -7,4 +7,10 @@ return [
      */
     'key' => '{key}',
 
+    /**
+     * Supported languages. The first language code in the list is the default
+     * one.
+     */
+    'languages' => ['en'],
+
 ];
