upd: cookie prefixes

--- a/src/Console/create/config/auth.php.example
+++ b/src/Console/create/config/auth.php.example
@@ -5,7 +5,7 @@ return [
     /**
      * Authentication stateful session.
      */
-    'session_cookie_name' => 'passport',
+    'session_cookie_name' => '__Host-passport',
     'session_ttl_days' => 7, // After this period the authentication session will be terminated, if the user was inactive.
     'session_update_minutes' => 5, // The "last seen" data will be updated not more often than this period.
 
