feat: Environment variables

--- a/src/Console/create/public/index.php.example
+++ b/src/Console/create/public/index.php.example
@@ -1,10 +1,10 @@
 <?php
 
-error_reporting(E_ALL);
-
 require __DIR__.'/../vendor/autoload.php';
 
-Val\App::run(function() {
+use Val\App;
+
+App::run(function() {
 
     echo 'Hello, Wolrd!';
 
